--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
         <div class="col-12">
             <center>
                 <div class="how-to-subscribe">
-                    Read my latest blog post: <a href="{{ url_for('get_blog_post', blog_post=latest_blog.slug) }}">{{ latest_blog.title }}</a>
+                    Read my latest article: <a href="{{ url_for('get_blog_post', blog_post=latest_blog.slug) }}">{{ latest_blog.title }}</a>
                 </div>
             </center>
         </div>
