--- a/app/templates/blog-posts.html
+++ b/app/templates/blog-posts.html
@@ -4,7 +4,7 @@
     <div class="col-12">
         <center>
         <div class="how-to-subscribe">
-            Want to be notified about new posts? <span class="heart">❤&#xFE0E</span> Subscribe via <a href="https://tinyletter.com/sethmlarson">the newsletter</a> or <a href="{{ url_for('rss_blog_posts') }}">RSS</a>
+            Want to be notified about new articles? <span class="heart">❤&#xFE0E</span> Subscribe via <a href="https://tinyletter.com/sethmlarson">the newsletter</a> or <a href="{{ url_for('rss_blog_posts') }}">RSS</a>
         </div>
         </center>
     </div>
