--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,13 +16,13 @@
     <meta property="og:author" content="Seth Michael Larson"/>
     <meta property="og:type" content="article"/>
     <meta property="og:description" content="Blogging about Python and the Internet"/>
-    <meta property="og:image" content="{{ url_for('static', filename='avatar.jpeg', _external=True) }}"/>
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/18519037"/>
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:site" content="@sethmlarson"/>
     <meta name="twitter:creator" content="@sethmlarson"/>
     <meta name="twitter:title" content="Seth Michael Larson"/>
     <meta name="twitter:description" content="Blogging about Python and the Internet"/>
-    <meta name="twitter:image" content="{{ url_for('static', filename='avatar.jpeg', _external=True) }}"/>
+    <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/18519037"/>
 {% endblock %}
 </head>
 <body>
