Update index page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,10 +16,10 @@
         <div class="col-12">
             <h2>Who am I?</h2>
             <p>
-                My pronouns are he / him. I currently reside in Minneapolis, Minnesota. I write about intermediate and advanced Python, API design, and Internet technologies. If you're interested
+                My pronouns are he / him. I write about intermediate and advanced Python, open source maintainership and sustainiability, API design, and internet technologies. If you're interested
                 in any of these topics you can <a href="{{ url_for('list_blog_posts') }}">read articles on my blog</a> or <a href="https://twitter.com/sethmlarson" target="_blank" rel="noopener">follow me on Twitter</a>.
+                If you're looking to contact me you can do so via <a href="mailto:sethmichaellarson@gmail.com" target="_blank" rel="noopener">email</a> or <a href="https://twitter.com/sethmlarson" target="_blank" rel="noopener">Twitter</a>.
             </p>
-            <p>You can contact me via <a href="mailto:sethmichaellarson@gmail.com" target="_blank" rel="noopener">email</a> or <a href="https://twitter.com/sethmlarson" target="_blank" rel="noopener">Twitter</a>.</p>
             <h2>Open source maintainer</h2>
             <p>
                 I maintain and contribute to
@@ -28,14 +28,14 @@
                 Most notably I'm the lead maintainer of <a href="https://github.com/urllib3/urllib3" target="_blank" rel="noopener noreferrer">urllib3</a>, an HTTP
                 client library that is the <a href="https://pepy.tech/project/urllib3" target="_blank" rel="noopener noreferrer">
                 most downloaded package</a> on the Python Package Index with
-                over 4 billion downloads. In 2019 I was awarded the
-                <a href="https://www.linkedin.com/posts/sethmichaellarson_ive-been-awarded-the-google-open-source-activity-6613836181647958017-IRbo/" target="_blank" rel="noopener noreferrer">
-                Google Open Source Peer Bonus</a> for my contributions to urllib3.
+                over 5 billion downloads. I've been recognized for my work in open source with the <a href="https://github.blog/2022-06-24-thank-you-to-our-maintainers" target="_blank" rel="noopener noreferrer">GitHub Maintainer Month</a> sponsorship in 2022 and <a href="https://www.linkedin.com/posts/sethmichaellarson_ive-been-awarded-the-google-open-source-activity-6613836181647958017-IRbo/" target="_blank" rel="noopener noreferrer">
+                Google Open Source Peer Bonus</a> in 2019.
             </p>
             <p>
                 Other projects I contribute to include
                 <a href="https://github.com/psf/requests" target="_blank" rel="noopener noreferrer">requests</a>,
                 <a href="https://github.com/python-distro/distro" target="_blank" rel="noopener noreferrer">distro</a>,
+                <a href="https://github.com/sethmlarson/truststore" target="_blank" rel="noopener noreferrer">truststore</a>,
                 <a href="https://github.com/python-hyper/rfc3986" target="_blank" rel="noopener noreferrer">rfc3986</a>,
                 <a href="https://github.com/python-hyper/brotlicffi" target="_blank" rel="noopener noreferrer">brotlicffi</a>,
                 <a href="https://github.com/sethmlarson/hstspreload" target="_blank" rel="noopener noreferrer">hstspreload</a>,
@@ -44,12 +44,16 @@
                 <a href="https://github.com/python-trio/unasync" target="_blank" rel="noopener noreferrer">unasync</a>.
                 If you benefit from any of these projects you can
                 <a href="https://github.com/sponsors/sethmlarson" target="_blank" rel="noopener noreferrer">
-                sponsor me on GitHub Sponsors</a> to support my cravings for foods like tacos and hotpot.
+                sponsor me on GitHub Sponsors</a>.
             </p>
             <h2>Engineer at Elastic</h2>
             <p>
-                I'm a senior Software Engineer at <a href="https://elastic.co" target="_blank" rel="noopener noreferrer">Elastic</a>
-                working as maintainer of the
+                I'm a senior software engineer at <a href="https://elastic.co" target="_blank" rel="noopener noreferrer">Elastic</a>
+                working as a tech lead for the Language Clients team. My work includes promoting API design principles
+                across the greater Elasticsearch team. In 2020 I was awarded the Elastic Outstanding Contributor award.
+            </p>
+            <p>
+                Previously I was the maintainer of the
                 <a href="https://github.com/elastic/elasticsearch-py" target="_blank" rel="noopener noreferrer">
                 Python API clients</a> for services like Elasticsearch, Enterprise Search, and more. I'm also
                 an advocate for Python and Elastic through engaging with the community, attending
