--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,7 +28,7 @@
                 Most notably I'm the lead maintainer of <a href="https://github.com/urllib3/urllib3" target="_blank" rel="noopener noreferrer">urllib3</a>, an HTTP
                 client library that is the <a href="https://pepy.tech/project/urllib3" target="_blank" rel="noopener noreferrer">
                 most downloaded package</a> on the Python Package Index with
-                over 5 billion downloads. I've been recognized for my work in open source with the <a href="https://github.blog/2022-06-24-thank-you-to-our-maintainers" target="_blank" rel="noopener noreferrer">GitHub Maintainer Month</a> sponsorship in 2022 and <a href="https://www.linkedin.com/posts/sethmichaellarson_ive-been-awarded-the-google-open-source-activity-6613836181647958017-IRbo/" target="_blank" rel="noopener noreferrer">
+                over 5 billion downloads. I was made a <a href="https://pyfound.blogspot.com/2022/07/announcing-python-software-foundation.html" target="_blank" rel="noopener noreferrer">Python Software Foundation Fellow</a> in 2022. I've been recognized for my work in open source with the <a href="https://github.blog/2022-06-24-thank-you-to-our-maintainers" target="_blank" rel="noopener noreferrer">GitHub Maintainer Month</a> sponsorship in 2022 and <a href="https://www.linkedin.com/posts/sethmichaellarson_ive-been-awarded-the-google-open-source-activity-6613836181647958017-IRbo/" target="_blank" rel="noopener noreferrer">
                 Google Open Source Peer Bonus</a> in 2019.
             </p>
             <p>
@@ -39,6 +39,7 @@
                 <a href="https://github.com/python-hyper/rfc3986" target="_blank" rel="noopener noreferrer">rfc3986</a>,
                 <a href="https://github.com/python-hyper/brotlicffi" target="_blank" rel="noopener noreferrer">brotlicffi</a>,
                 <a href="https://github.com/sethmlarson/hstspreload" target="_blank" rel="noopener noreferrer">hstspreload</a>,
+                <a href="https://github.com/sethmlarson/psl" target="_blank" rel="noopener noreferrer">psl</a>,
                 <a href="https://utf8.xyz" target="_blank" rel="noopener noreferrer">utf8.xyz</a>,
                 <a href="https://github.com/python-trio/sniffio" target="_blank" rel="noopener noreferrer">sniffio</a>, and
                 <a href="https://github.com/python-trio/unasync" target="_blank" rel="noopener noreferrer">unasync</a>.
