--- a/app/static/style.css
+++ b/app/static/style.css
@@ -21,6 +21,9 @@ h2 {
 h3 {
   font-size: 1.4em;
 }
+blockquote > p:last-child {
+    margin-bottom: 0;
+}
 p {
   line-height: 1.5em;
   margin: 0;
@@ -232,6 +235,7 @@ blockquote {
   background-color: #E5E6E8;
   border-radius: 0.5em;
   margin: 0;
+  margin-bottom: 1.5em;
   padding: 0.5em 1em;
 }
 
@@ -290,4 +294,13 @@ h1:hover .anchor, h2:hover .anchor, h3:hover .anchor, h4:hover .anchor, h5 .anch
   display: inline-flex;
   visibility: visible;
   opacity: 1;
+}
+a > code {
+  text-decoration: none;
+  transition: 0.5s;
+  color: #2979FF;
+}
+a > code:hover {
+  color: #f92672 !important;
+  text-decoration: underline;
 }
