Change prose, update Atom link

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,29 +16,35 @@
         <div class="col-12">
             <h2>Who am I?</h2>
             <p>
-                My pronouns are he / him. I write about intermediate and advanced Python, open source maintainership and sustainiability, API design, and internet technologies. If you're interested
-                in any of these topics you can <a href="{{ url_for('list_blog_posts') }}">read articles on my blog</a> or <a href="https://twitter.com/sethmlarson" target="_blank" rel="noopener">follow me on Twitter</a>.
-                If you're looking to contact me you can do so via <a href="mailto:sethmichaellarson@gmail.com" target="_blank" rel="noopener">email</a> or <a href="https://twitter.com/sethmlarson" target="_blank" rel="noopener">Twitter</a>.
+                I write about intermediate and advanced Python, open source, security, and internet tech.
+                If you're also interested in these topics you may find <a href="{{ url_for('list_blog_posts') }}">articles on my blog</a> worth a read.
+                There are two ways to avoid missing out on when new articles are published, either by <a href="https://tinyletter.com/sethmlarson" target="_blank" rel="noopener">following my mailing list</a> or using your RSS reader of
+                choice to <a href="{{ url_for('rss_blog_posts') }}">subscribe to my RSS feed</a>.
+            </p>
+            <p>
+                My social media of choice is <a href="https://fosstodon.org/@sethmlarson" target="_blank" rel="noopener">Mastodon</a>.
+                Direct contact is best through <a href="mailto:sethmichaellarson@gmail.com" target="_blank" rel="noopener">email</a>.
+                My pronouns are he / him.
             </p>
             <h2>Open source maintainer</h2>
             <p>
                 I maintain and contribute to
-                <a href="https://github.com/sethmlarson?tab=repositories" target="_blank" rel="noopener noreferrer">many open source projects</a>,
-                especially in the HTTP and networking space for Python.
+                <a href="https://github.com/sethmlarson?tab=repositories" target="_blank" rel="noopener noreferrer">many open source projects</a> which run on <a href="https://github.com/sethmlarson?tab=achievements&achievement=mars-2020-contributor" target="_blank" rel="noopener noreferrer">at least two planets</a>.
                 Most notably I'm the lead maintainer of <a href="https://github.com/urllib3/urllib3" target="_blank" rel="noopener noreferrer">urllib3</a>, an HTTP
                 client library that is the <a href="https://pepy.tech/project/urllib3" target="_blank" rel="noopener noreferrer">
                 most downloaded package</a> on the Python Package Index with
-                over 5 billion downloads. I was made a <a href="https://pyfound.blogspot.com/2022/07/announcing-python-software-foundation.html" target="_blank" rel="noopener noreferrer">Python Software Foundation Fellow</a> in 2022. I've been recognized for my work in open source with the <a href="https://github.blog/2022-06-24-thank-you-to-our-maintainers" target="_blank" rel="noopener noreferrer">GitHub Maintainer Month</a> sponsorship in 2022 and <a href="https://www.linkedin.com/posts/sethmichaellarson_ive-been-awarded-the-google-open-source-activity-6613836181647958017-IRbo/" target="_blank" rel="noopener noreferrer">
+                over 7 billion downloads. I was made a <a href="https://pyfound.blogspot.com/2022/07/announcing-python-software-foundation.html" target="_blank" rel="noopener noreferrer">Python Software Foundation Fellow</a> in 2022.
+                I've been recognized for my work in open source with the <a href="https://github.blog/2022-06-24-thank-you-to-our-maintainers" target="_blank" rel="noopener noreferrer">GitHub Maintainer Month</a> sponsorship in 2022 and <a href="https://www.linkedin.com/posts/sethmichaellarson_ive-been-awarded-the-google-open-source-activity-6613836181647958017-IRbo/" target="_blank" rel="noopener noreferrer">
                 Google Open Source Peer Bonus</a> in 2019.
             </p>
             <p>
                 Other projects I contribute to include
                 <a href="https://github.com/psf/requests" target="_blank" rel="noopener noreferrer">requests</a>,
-                <a href="https://github.com/python-distro/distro" target="_blank" rel="noopener noreferrer">distro</a>,
                 <a href="https://github.com/sethmlarson/truststore" target="_blank" rel="noopener noreferrer">truststore</a>,
                 <a href="https://github.com/python-hyper/rfc3986" target="_blank" rel="noopener noreferrer">rfc3986</a>,
                 <a href="https://github.com/python-hyper/brotlicffi" target="_blank" rel="noopener noreferrer">brotlicffi</a>,
                 <a href="https://github.com/sethmlarson/hstspreload" target="_blank" rel="noopener noreferrer">hstspreload</a>,
+                <a href="https://github.com/sethmlarson/capture-packets" target="_blank" rel="noopener noreferrer">capture-packets</a>,
                 <a href="https://github.com/sethmlarson/psl" target="_blank" rel="noopener noreferrer">psl</a>,
                 <a href="https://utf8.xyz" target="_blank" rel="noopener noreferrer">utf8.xyz</a>,
                 <a href="https://github.com/python-trio/sniffio" target="_blank" rel="noopener noreferrer">sniffio</a>, and
@@ -49,16 +55,10 @@
             </p>
             <h2>Engineer at Elastic</h2>
             <p>
-                I'm a senior software engineer at <a href="https://elastic.co" target="_blank" rel="noopener noreferrer">Elastic</a>
-                working as a tech lead for the Language Clients team. My work includes promoting API design principles
-                across the greater Elasticsearch team. In 2020 I was awarded the Elastic Outstanding Contributor award.
-            </p>
-            <p>
-                Previously I was the maintainer of the
+                I'm a principal software engineer at <a href="https://elastic.co" target="_blank" rel="noopener noreferrer">Elastic</a>
+                working as a tech lead for the Language Clients team. Previously at Elastic I was the maintainer of the
                 <a href="https://github.com/elastic/elasticsearch-py" target="_blank" rel="noopener noreferrer">
-                Python API clients</a> for services like Elasticsearch, Enterprise Search, and more. I'm also
-                an advocate for Python and Elastic through engaging with the community, attending
-                conferences, recording live webinars, and writing blog posts.
+                Python API clients</a> for services like Elasticsearch, Enterprise Search, and more. In 2020 I was awarded the Elastic Outstanding Contributor award.
             </p>
         </div>
     </div>
