--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,36 +1,87 @@
 html, body {
-  font-family: -apple-system,BlinkMacSystemFont,avenir next,avenir,helvetica neue,helvetica,Ubuntu,roboto,noto,segoe ui,arial,sans-serif;
+  font-family: 'Menlo', 'Fira Mono', monospace;
 }
 body {
-  color: #2e3440;
-  background-color: #f9fafb;
+  background-color: #fff;
+  color: #000;
+  margin: 0;
+  padding: 0;
+  font-weight: 400;
+  font-size: 1rem;
+  font-feature-settings: "liga", "tnum", "zero", "ss01", "locl";
+  line-height: 1.54;
+  -webkit-overflow-scrolling: touch;
+  -webkit-text-size-adjust: 100%;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased !important;
-  -moz-font-smoothing: antialiased !important;
-  text-rendering: optimizelegibility !important;
+  -webkit-font-smoothing: antialiased;
+  -moz-font-smoothing: antialiased;
+  text-rendering: optimizelegibility;
+
+  @media (min-width:600px) {
+    font-size: 1.2rem;
+  }
 }
-li, ul {
-  margin-top: 0.3em;
-  margin-bottom: 0.3em;
-  line-height: 1.2em;
+strong {
+  font-weight: 500;
 }
-h2 {
-  font-size: 1.7em;
-  line-height: 1em;
+
+a {
+  color: #0000ff;
+  text-decoration: underline;
+  text-decoration-line: underline;
 }
-h3 {
-  font-size: 1.4em;
+a[href^=tel]{ color:#000; text-decoration:none;}
+
+h1, h2, h3, h4, h5, h6 {
+  letter-spacing: 0em;
+  line-height: 1.3;
+  font-weight: 500;
+}
+h2:not(:first-child) {
+ margin-top: 40px;
+}
+h3:not(:first-child) {
+ margin-top: 40px;
+}
+h4:not(:first-child) {
+ margin-top: 40px;
+}
+h5:not(:first-child) {
+ margin-top: 40px;
+}
+h6:not(:first-child) {
+ margin-top: 40px;
+}
+h1 {
+  font-size: 2rem;
+  margin: 0;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+h2, h3 {
+  font-size: 1.2rem;
+}
+h4, h5, h6 {
+  font-size: 1.1rem;
+}
+h2, h3 {
+  border-bottom: solid;
+  border-width: 1px;
+}
+h1:hover .anchor, h2:hover .anchor, h3:hover .anchor, h4:hover .anchor, h5 .anchor {
+  display: inline-flex;
+  visibility: visible;
+  opacity: 1;
 }
 blockquote > p:last-child {
     margin-bottom: 0;
 }
 p {
-  line-height: 1.5em;
   margin: 0;
   margin-bottom: 1.5em;
 }
-ol, ul {
-  margin-bottom: 1.5em;
+ul {
+  list-style-type: square;
 }
 .container {
   width: 90%;
@@ -43,8 +94,7 @@ ol, ul {
 }
 .row [class^="col"] {
   float: left;
-  margin-left: 2%;
-  margin-right: 2%;
+  margin-right: 4%;
   min-height: 0.125rem;
 }
 .col-1,
@@ -116,10 +166,6 @@ ol, ul {
 	clear: both;
 }
 
-.hidden-sm {
-  display: none;
-}
-
 @media only screen and (min-width: 33.75em) {  /* 540px */
   .container {
     width: 80%;
@@ -174,10 +220,6 @@ ol, ul {
   .col-12 {
     width: 96%;
   }
-
-  .hidden-sm {
-    display: block;
-  }
 }
 
 @media only screen and (min-width: 60em) { /* 960px */
@@ -186,121 +228,126 @@ ol, ul {
     max-width: 60rem;
   }
 }
-
-.blog-title {
-  font-size: 2.5em;
-}
-
-a[href^=tel]{ color:#000; text-decoration:none;}
-a > svg {
-  text-decoration: none !important;
-}
-a {
-  text-decoration: none;
-  transition: 0.5s;
-  color: #2979FF;
-}
-a:hover {
-  color: #f92672 !important;
-  text-decoration: underline;
-}
-
 pre {
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 :not(pre) > code {
-  background-color: #2e3440;
-  color: #f9fafb;
-  border-radius: 0.25em;
-  padding: 0.3em;
-  margin-left: 2px;
-  margin-right: 2px;
+  background-color: #f0f0f0;
+  border-radius: 0.2em;
+  padding: 0.2em;
   white-space: nowrap;
 }
-.codehilite {
-  font-family: monospace;
-  color: #f9fafb;
-  background-color: #2e3440;
+.codehilite, :not(.codehilite) > pre {
+  background-color: #f0f0f0;
+  border-style: solid;
+  border-width: 1px;
   padding: 1em;
   overflow-x: scroll;
   margin: 0;
   margin-bottom: 1.5em;
 }
-pre > code {
-  font-size: 1.1em;
-  inline-size: min-content;
-}
 blockquote {
-  background-color: #E5E6E8;
-  border-radius: 0.5em;
+  background-color: #f0f0f0;
+  border-style: solid;
+  border-width: 1px;
   margin: 0;
   margin-bottom: 1.5em;
   padding: 0.5em 1em;
 }
-
-td.linenos .normal{color:inherit;background-color:transparent;padding-left:5px;padding-right:5px}span.linenos{color:inherit;background-color:transparent;padding-left:5px;padding-right:5px}td.linenos .special{color:#000;background-color:#ffffc0;padding-left:5px;padding-right:5px}span.linenos.special{color:#000;background-color:#ffffc0;padding-left:5px;padding-right:5px}.hll{background-color:#49483e}.c{color:#75715e}.err{color:#960050;background-color:#1e0010}.k{color:#66d9ef}.l{color:#ae81ff}.n{color:#f8f8f2}.o{color:#f92672}.p{color:#f8f8f2}.ch{color:#75715e}.cm{color:#75715e}.cp{color:#75715e}.cpf{color:#75715e}.c1{color:#75715e}.cs{color:#75715e}.gd{color:#f92672}.ge{font-style:italic}.gi{color:#a6e22e}.go{color:#66d9ef}.gp{color:#f92672;font-weight:700}.gs{font-weight:700}.gu{color:#75715e}.kc{color:#66d9ef}.kd{color:#66d9ef}.kn{color:#f92672}.kp{color:#66d9ef}.kr{color:#66d9ef}.kt{color:#66d9ef}.ld{color:#e6db74}.m{color:#ae81ff}.s{color:#e6db74}.na{color:#a6e22e}.nb{color:#f8f8f2}.nc{color:#a6e22e}.no{color:#66d9ef}.nd{color:#a6e22e}.ni{color:#f8f8f2}.ne{color:#a6e22e}.nf{color:#a6e22e}.nl{color:#f8f8f2}.nn{color:#f8f8f2}.nx{color:#a6e22e}.py{color:#f8f8f2}.nt{color:#f92672}.nv{color:#f8f8f2}.ow{color:#f92672}.w{color:#f8f8f2}.mb{color:#ae81ff}.mf{color:#ae81ff}.mh{color:#ae81ff}.mi{color:#ae81ff}.mo{color:#ae81ff}.sa{color:#e6db74}.sb{color:#e6db74}.sc{color:#e6db74}.dl{color:#e6db74}.sd{color:#e6db74}.s2{color:#e6db74}.se{color:#ae81ff}.sh{color:#e6db74}.si{color:#e6db74}.sx{color:#e6db74}.sr{color:#e6db74}.s1{color:#e6db74}.ss{color:#e6db74}.bp{color:#f8f8f2}.fm{color:#a6e22e}.vc{color:#f8f8f2}.vg{color:#f8f8f2}.vi{color:#f8f8f2}.vm{color:#f8f8f2}.il{color:#ae81ff}
-
-.icon, .icon:hover {
-  text-decoration: none !important;
-}
-.icon > svg:hover path {
-  text-decoration: none !important;
-  fill: #f92672;
-  transition: all ease 0.5s;
-}
-.icon > svg path {
-  fill: #2979FF;
-  transition: all ease 0.5s;
-}
-.navbar-inner > a {
-  margin-left: 1em;
-}
-.navbar-inner {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  min-width: 17em;
-}
-.navbar-outer {
-  margin: 0;
-  position: relative;
-  height: 4em;
-  width: 100%;
-}
-.how-to-subscribe {
-  font-size: 1.1em;
-  color: #f9fafb;
-  background-color: #2e3440;
-  border-radius: 0.5em;
-  margin: 0;
-  padding: 0.5em 1em;
-}
-.heart {
-  color: #f92672;
-}
 .anchor {
   line-height: 0;
   text-decoration: none !important;
-  font-family: monospace;
+  font-weight: 400;
   margin-left: 0.5em;
   visibility: hidden;
   opacity: 0;
   transition: opacity 0.3s linear;
-}
-h1:hover .anchor, h2:hover .anchor, h3:hover .anchor, h4:hover .anchor, h5 .anchor {
-  display: inline-flex;
-  visibility: visible;
-  opacity: 1;
 }
 a > code {
   text-decoration: none;
   transition: 0.5s;
   color: #2979FF;
 }
-a > code:hover {
-  color: #f92672 !important;
-  text-decoration: underline;
+.header {
+  width: 100%;
+  background: #000000;
+  color: #ffffff;
+  margin: 0;
+  padding: 0;
+  padding-top: 1rem;
+  margin-bottom: 1rem;
 }
+.header a {
+  color: #ffffff;
+}
+
+.codehilite .hll { background-color: #ffffcc }
+.codehilite  { background: #f8f8f8; }
+.codehilite .c { color: #408080; font-style: italic } /* Comment */
+.codehilite .err { border: 1px solid #FF0000 } /* Error */
+.codehilite .k { color: #008000; font-weight: bold } /* Keyword */
+.codehilite .o { color: #666666 } /* Operator */
+.codehilite .ch { color: #408080; font-style: italic } /* Comment.Hashbang */
+.codehilite .cm { color: #408080; font-style: italic } /* Comment.Multiline */
+.codehilite .cp { color: #BC7A00 } /* Comment.Preproc */
+.codehilite .cpf { color: #408080; font-style: italic } /* Comment.PreprocFile */
+.codehilite .c1 { color: #408080; font-style: italic } /* Comment.Single */
+.codehilite .cs { color: #408080; font-style: italic } /* Comment.Special */
+.codehilite .gd { color: #A00000 } /* Generic.Deleted */
+.codehilite .ge { font-style: italic } /* Generic.Emph */
+.codehilite .gr { color: #FF0000 } /* Generic.Error */
+.codehilite .gh { color: #000080; font-weight: bold } /* Generic.Heading */
+.codehilite .gi { color: #00A000 } /* Generic.Inserted */
+.codehilite .go { color: #888888 } /* Generic.Output */
+.codehilite .gp { color: #000080; font-weight: bold } /* Generic.Prompt */
+.codehilite .gs { font-weight: bold } /* Generic.Strong */
+.codehilite .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
+.codehilite .gt { color: #0044DD } /* Generic.Traceback */
+.codehilite .kc { color: #008000; font-weight: bold } /* Keyword.Constant */
+.codehilite .kd { color: #008000; font-weight: bold } /* Keyword.Declaration */
+.codehilite .kn { color: #008000; font-weight: bold } /* Keyword.Namespace */
+.codehilite .kp { color: #008000 } /* Keyword.Pseudo */
+.codehilite .kr { color: #008000; font-weight: bold } /* Keyword.Reserved */
+.codehilite .kt { color: #B00040 } /* Keyword.Type */
+.codehilite .m { color: #666666 } /* Literal.Number */
+.codehilite .s { color: #BA2121 } /* Literal.String */
+.codehilite .na { color: #7D9029 } /* Name.Attribute */
+.codehilite .nb { color: #008000 } /* Name.Builtin */
+.codehilite .nc { color: #0000FF; font-weight: bold } /* Name.Class */
+.codehilite .no { color: #880000 } /* Name.Constant */
+.codehilite .nd { color: #AA22FF } /* Name.Decorator */
+.codehilite .ni { color: #999999; font-weight: bold } /* Name.Entity */
+.codehilite .ne { color: #D2413A; font-weight: bold } /* Name.Exception */
+.codehilite .nf { color: #0000FF } /* Name.Function */
+.codehilite .nl { color: #A0A000 } /* Name.Label */
+.codehilite .nn { color: #0000FF; font-weight: bold } /* Name.Namespace */
+.codehilite .nt { color: #008000; font-weight: bold } /* Name.Tag */
+.codehilite .nv { color: #19177C } /* Name.Variable */
+.codehilite .ow { color: #AA22FF; font-weight: bold } /* Operator.Word */
+.codehilite .w { color: #bbbbbb } /* Text.Whitespace */
+.codehilite .mb { color: #666666 } /* Literal.Number.Bin */
+.codehilite .mf { color: #666666 } /* Literal.Number.Float */
+.codehilite .mh { color: #666666 } /* Literal.Number.Hex */
+.codehilite .mi { color: #666666 } /* Literal.Number.Integer */
+.codehilite .mo { color: #666666 } /* Literal.Number.Oct */
+.codehilite .sa { color: #BA2121 } /* Literal.String.Affix */
+.codehilite .sb { color: #BA2121 } /* Literal.String.Backtick */
+.codehilite .sc { color: #BA2121 } /* Literal.String.Char */
+.codehilite .dl { color: #BA2121 } /* Literal.String.Delimiter */
+.codehilite .sd { color: #BA2121; font-style: italic } /* Literal.String.Doc */
+.codehilite .s2 { color: #BA2121 } /* Literal.String.Double */
+.codehilite .se { color: #BB6622; font-weight: bold } /* Literal.String.Escape */
+.codehilite .sh { color: #BA2121 } /* Literal.String.Heredoc */
+.codehilite .si { color: #BB6688; font-weight: bold } /* Literal.String.Interpol */
+.codehilite .sx { color: #008000 } /* Literal.String.Other */
+.codehilite .sr { color: #BB6688 } /* Literal.String.Regex */
+.codehilite .s1 { color: #BA2121 } /* Literal.String.Single */
+.codehilite .ss { color: #19177C } /* Literal.String.Symbol */
+.codehilite .bp { color: #008000 } /* Name.Builtin.Pseudo */
+.codehilite .fm { color: #0000FF } /* Name.Function.Magic */
+.codehilite .vc { color: #19177C } /* Name.Variable.Class */
+.codehilite .vg { color: #19177C } /* Name.Variable.Global */
+.codehilite .vi { color: #19177C } /* Name.Variable.Instance */
+.codehilite .vm { color: #19177C } /* Name.Variable.Magic */
+.codehilite .il { color: #666666 } /* Literal.Number.Integer.Long */
