--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -6,34 +6,22 @@
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="{{ blog_title }}"/>
     <meta property="og:description" content="{{ blog_content_text | truncate(200, true, '...')}}"/>
-    <meta property="og:image" content="https://avatars.githubusercontent.com/u/18519037"/>
+    <meta property="og:image" content="https://github.com/sethmlarson.png"/>
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:site" content="@sethmlarson"/>
     <meta name="twitter:creator" content="@sethmlarson"/>
     <meta name="twitter:title" content="{{ blog_title }}"/>
     <meta name="twitter:description" content="{{ blog_content_text | truncate(200, true, '...')}}"/>
-    <meta property="og:image" content="https://avatars.githubusercontent.com/u/18519037"/>
+    <meta name="twitter:image" content="https://github.com/sethmlarson.png"/>
+{% endblock %}
+{% block header %}
+<h1>{{ blog_title }}</h1>
+<p>{{ blog_published_date }} by <a href="/about">@sethmlarson</a></p>
 {% endblock %}
 {% block content %}
 <div class="row">
     <div class="col-12">
-        <h2 class="blog-title" style="text-align: center">{{ blog_title }}</h2>
-        <p><center>Published {{ blog_published_date }} — <span class="heart">❤&#xFE0E</span> Subscribe for more via <a href="https://tinyletter.com/sethmlarson">the newsletter</a> or <a href="{{ url_for('rss_blog_posts') }}">RSS</a></center></p>
-    </div>
-</div>
-<div class="row">
-    <div class="col-12">
         {{ blog_content | safe }}
-    </div>
-</div>
-<div class="row">
-    <div class="col-12">
-        <center>
-        <br>
-        <div class="how-to-subscribe">
-            Enjoy this article? <span class="heart">❤&#xFE0E</span> Subscribe for more via <a href="https://tinyletter.com/sethmlarson">the newsletter</a> or <a href="{{ url_for('rss_blog_posts') }}">RSS</a>
-        </div>
-        </center>
     </div>
 </div>
 {% endblock %}
