normalize the by

--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -16,7 +16,8 @@
 {% endblock %}
 {% block header %}
 <h1>{{ blog_title }}</h1>
-<p>{{ blog_published_date }} by <a href="/about">@sethmlarson</a></p>
+<p>Published {{ blog_published_date }}<br>
+by Seth Michael Larson</p>
 {% endblock %}
 {% block content %}
 <div class="row">
