--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -16,8 +16,7 @@
 {% endblock %}
 {% block header %}
 <h1>{{ blog_title }}</h1>
-<p>Published {{ blog_published_date }}<br>
-by Seth Michael Larson</p>
+<p>Published {{ blog_published_date }} by Seth Michael Larson</p>
 {% endblock %}
 {% block content %}
 <div class="row">
