--- a/app/templates/blog-posts.html
+++ b/app/templates/blog-posts.html
@@ -6,8 +6,8 @@
 <div class="row">
     <div class="col-12">
         <h2 id="highlighted">Highlighted articles<a class="anchor" href="#highlighted" aria-hidden="true">§</a></h2>
-        <p>If you're a first time reader, welcome! These articles are the ones that I'm most proud of, so if you're looking for
-        somewhere to start I recommend you start with one of these:</p>
+        <p>If you're a first time reader, welcome! 👋 Below are the articles that I'm most proud of so if you're looking for a place to start then look no further:</p>
+
         <p><strong><a href="/python-and-slsa">Python and SLSA 💃</a></strong><br>
             Supply chain Layers for Software Artifacts (SLSA) is a framework of tools to generate and verify provenance for software artifacts.
             How can these tools be put to use in existing Python packages to attest to provenance of wheels and source distributions on PyPI?
@@ -17,7 +17,7 @@
             urllib3 which has seen success in this area, what are some ways that projects can prepare themselves to ride the wave?
         </p>
         <p><strong><a href="/people-in-your-software-supply-chain">People in your software supply chain</a></strong><br>
-            Open source is entering a new era of scrutiny. Organizations are examining their open source dependencies. Let's remember that the most important dependency you're relying on won't show up in your lock files, it's people!
+            Open source is entering a new era of scrutiny driven by organizations digging into their dependencies. Let's remember that the most important dependency we're relying on won't show up in your lock files, it's people!
         </p>
         <p><strong><a href="/security-for-package-maintainers">Security for package maintainers</a></strong><br>
             Package maintainers have extremely privileged accounts with any unauthorized access having the potential to affect millions of users. What are some secure account configurations and best practices that can keep this nightmare scenario from happening to you?
